# samples

./: .gitignore  CLAUDE.md  clickhouse_string_comparison.py  mkdocs.yml  pyproject.toml  setup_clickhouse.sh
.github/workflows/: benchmark.yml  clickhouse-low-card-snow-id.yml  post_0001.yml  post_0002.yml  python-data-libs.yml
clickhouse-low-card-snow-id/: README.md  clickhouse-low-card-snow-id.sh  post.txt  pyproject.toml  requirements.txt
clickhouse-low-card-snow-id/clickhouse_low_card_snow_id/: __init__.py
docs/: example_projects.md  index.md  lineage.md  sources.md
gists/: clickhouse_lowcardinality_benchmark.py
infra/: setup-ch
post_0001/: clickhouse_lowcardinality_benchmark.py  clickhouse_snowflake_id_benchmark.py  post.txt  reddit.md  reddit.txt
post_0002/: PLAN.md  SPEC.md  bench_aaiclick.py  bench_chdb.py  bench_pandas.py  bench_sqlite.py  config.py  data_library_benchmark.py  report.py  run.py
python-data-libs/: README.md  SPEC.md  bench_aaiclick.py  bench_chdb.py  bench_duckdb.py  bench_numpy.py  bench_pandas.py  bench_polars.py  bench_pyarrow.py  bench_python.py  bench_sqlite.py  pyproject.toml  python-data-libs.sh  report.py  requirements.txt  run.py  task_runner.py
python-data-libs/python_data_libs/: bench_aaiclick.py  bench_chdb.py  bench_duckdb.py  bench_numpy.py  bench_polars.py  bench_pyarrow.py  bench_python.py  bench_sqlite.py  bench_sqlite_indexed.py  config.py  report.py  run.py
