[project]
name = "databear"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aaiclick>=0.0.9",
    "clickhouse-connect",
    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    "rich>=14.3.3",
]

[project.scripts]
clickhouse-string-comparison = "clickhouse_string_comparison:main"
